--- a/assets/yandex-browser-manifest.json
+++ b/assets/yandex-browser-manifest.json
@@ -2,7 +2,7 @@
   "version": "1.0",
   "api_version": 1,
   "layout": {
-    "logo": "/astridx.github.io/astridxtileserverdemo.github.io/assets/yandex-browser-50x50.png",
+    "logo": "/astridxtileserverdemo.github.io/assets/yandex-browser-50x50.png",
     "color": "#fff",
     "show_title": true
   }
